[project]
name = "vulnwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-debug-toolbar>=6.3.0",
    "django-extensions>=4.1",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "python-dotenv>=1.2.2",
]
