[project]
name = "vulnwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.7.1",
    "django>=6.0.5",
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.3.0",
    "django-extensions>=4.1",
    "django-tailwind>=4.4.2",
    "pandas>=3.0.3",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "python-dotenv>=1.2.2",
]
